--- a/css/article2.css
+++ b/css/article2.css
@@ -100,3 +100,59 @@
 .a2-box:hover .a2-box-image img {
     transform: scale(1.1);
 }
+
+
+/*==================================================*/
+@media (max-width: 1100px) {
+    .a2-box {
+        flex-direction: column;
+        justify-content: unset;
+        gap: 3rem;
+    }
+
+    .a2-box:nth-child(2),
+    .a2-box:nth-child(4) {
+        flex-direction: column;
+        justify-content: flex-end;
+        align-items: flex-end;
+        gap: 3rem;
+        padding-right: 0;
+    }
+}
+
+
+@media (max-width: 550px) {
+    .a2-box-wrapper {
+        gap: 4rem;
+    }
+    
+    .a2-box {
+        align-items: unset !important;
+        gap: 2rem;
+    }
+
+    .a2-box-text {
+        width: 100%;
+    }
+
+    .a2-box-text h2 {
+        font-size: 14px;
+    }
+    
+    .a2-box-text h1 {
+        font-size: 35px;
+    }
+
+    .a2-box-text p {
+        font-size: 16px;
+        margin-top: 1rem;
+    }
+
+    .a2Btn {
+        margin-top: 2rem;
+    }
+
+    .a2Btn h3 {
+        font-size: 14px;
+    }
+}
