--- a/css/article_common.css
+++ b/css/article_common.css
@@ -9,6 +9,7 @@
     background-repeat: no-repeat !important;
     background-position: center !important;
     background-size: cover !important;
+    overflow: hidden;
     padding: 120px 0;
 }
 
@@ -30,8 +31,15 @@
 }
 
 
-@media (max-width: 850px) {
+@media (max-width: 950px) {
     .article {
-        padding: 40px 0;
+        padding: 80px 0;
+    }
+}
+
+
+@media (max-width: 550px) {
+    .article {
+        padding: 80px 0 40px 0;
     }
 }
