--- a/css/header.css
+++ b/css/header.css
@@ -80,6 +80,7 @@ nav ul a li {
 .logo, .logo-w {
     width: 115px;
     padding-top: 4px;
+    cursor: pointer;
 }
 
 #check {
@@ -94,6 +95,10 @@ nav ul a li {
     display: none;
 }
 
+.gnb-m {
+    display: none;
+}
+
 
 /*==================================================*/
 @media (max-width: 1250px) {
@@ -104,9 +109,13 @@ nav ul a li {
 }
 
 
-@media (max-width: 850px) {
+@media (max-width: 950px) {
     header {
         height: 75px;
+    }
+
+    .gnb {
+        display: none;
     }
 
     .Fixed2 {
@@ -127,29 +136,32 @@ nav ul a li {
         cursor: pointer;
     }
 
-    nav ul {
+    .gnb-m {
         position: absolute;
         top: 0; left: -100%;
         width: 80%;
         height: 100vh;
         padding-left: 50px;
+        display: flex;
         flex-direction: column;
         justify-content: center;
-        background-color: #111;
+        background-color: var(--main-color);
         touch-action: none;
         transition: all .2s;
         z-index: 7;
         gap: 2.2rem;
     }
 
-    nav ul li a {
+    .gnb-m li a {
         color: #fff;
-        font-size: 26px;
+        font-size: 22px;
+        font-weight: 500;
     }
 
-    nav ul a li {
+    .gnb-m a li {
         color: #fff;
-        font-size: 26px;
+        font-size: 22px;
+        font-weight: 500;
     }
 
     .overlay {
@@ -195,7 +207,7 @@ nav ul a li {
         background-color: #222;
     }
     
-    #check:checked ~ ul {left: 0;}
+    #check:checked ~ .gnb-m {left: 0;}
     #check:checked ~ .overlay {
         opacity: 1;
         visibility: visible;
@@ -205,8 +217,40 @@ nav ul a li {
 
 
 
-@media (max-width: 768px) {
+@media (max-width: 550px) {
+    header {
+        height: 65px;
+    }
+    
     .Fixed {
         height: 65px;
+    }
+
+    .logo, .logo-w {
+        width: 85px;
+    }
+
+    .bar1,
+    .bar2,
+    .bar3 {
+        width: 24px;
+        height: 2px;
+        margin: 3px 0;
+        transition: .3s ease;
+    }
+
+    .bar2 {
+        opacity: 0;
+        visibility: hidden;
+    }
+
+    .change .bar1 {
+        -webkit-transform: rotate(-45deg) translate(-5px, 2px);
+        transform: rotate(-45deg) translate(-3px, 3px);
+    }
+
+    .change .bar3 {
+        -webkit-transform: rotate(45deg) translate(-9px, -6px);
+        transform: rotate(45deg) translate(-4px, -4px);
     }
 }
